Update on Overleaf.

--- a/workshop.tex
+++ b/workshop.tex
@@ -127,7 +127,7 @@ Any issues with accessing these resources should be reported to
 
 \section{Workshop}
 
-The workshop itself will be streamed via YouTube, with breakout rooms to receive support available via Teams. Links will be made available to attendees before the session. The structure of the day will be as follows:
+The workshop itself will be streamed via YouTube, with breakout rooms to receive support available via Teams. Links to these platforms will be made available to attendees before the session. The structure of the day will be as follows:
 
 \begin{table}[h!]
     \centering
@@ -135,20 +135,35 @@ The workshop itself will be streamed via YouTube, with breakout rooms to receive
          Time & Activity & Platform  \\
          \hline
          10.00 - 10.10 & Introduction & YouTube \\
+         \hline
          10.10 - 10.30 & Coding practice: exercise & Teams \\
+         \hline
          10.30 - 10.50 & Live coding solution & YouTube \\
+         \hline
          10.50 - 11.00 & Break & - \\
+         \hline
          11.00 - 11.25 & Version control: exercise & Teams \\
+         \hline
          11.25 - 11.50 & Live coding solution & YouTube \\
+         \hline
          11.50 - 12.00 & Break & - \\
+         \hline
          12.00 - 12.25 & Testing: exercise & Teams \\
+         \hline
          12.25 - 12.50 & Live coding solution & YouTube \\
+         \hline
          12.50 - 14.00 & Lunch & - \\
+         \hline
          14.00 - 14.25 & Services: exercise & Teams \\
+         \hline
          14.25 - 14.50 & Live coding solution & YouTube \\
+         \hline
          14.50 - 15.00 & Break & - \\
+         \hline
          15.00 - 15.25 & Docker: exercise & Teams \\
+         \hline
          15.25 - 15.50 & Live coding solution & YouTube \\
+         \hline
          15.50 - 16.00 & Close & YouTube \\
          \hline
     \end{tabular}
