--- a/workshop.tex
+++ b/workshop.tex
@@ -1,12 +1,12 @@
-\documentclass{article} 
+\documentclass{article}
 
 %Packages
 
 \usepackage[utf8]{inputenc}
 
-\usepackage[parfill]{parskip} 
+\usepackage[parfill]{parskip}
 
-\usepackage[colorlinks=true,urlcolor=codeblue]{hyperref} 
+\usepackage[colorlinks=true,urlcolor=codeblue]{hyperref}
 
 \usepackage{minted}
 
@@ -127,48 +127,31 @@ Any issues with accessing these resources should be reported to
 
 \section{Workshop}
 
-The workshop itself will be streamed via YouTube, with breakout rooms to receive support available via Teams. Links to these platforms will be made available to attendees before the session. The structure of the day will be as follows:
+The workshop itself will be streamed via YouTube, with breakout rooms
+to receive support available via Teams. Links to these platforms will
+be made available to attendees before the session. The structure of the
+day will be as follows:
 
 \begin{table}[h!]
-    \centering
-    \begin{tabular}{c|c|c}
-         Time & Activity & Platform  \\
-         \hline
-         10.00 - 10.10 & Introduction & YouTube \\
-         \hline
-         10.10 - 10.30 & Coding practice: exercise & Teams \\
-         \hline
-         10.30 - 10.50 & Live coding solution & YouTube \\
-         \hline
-         10.50 - 11.00 & Break & - \\
-         \hline
-         11.00 - 11.25 & Version control: exercise & Teams \\
-         \hline
-         11.25 - 11.50 & Live coding solution & YouTube \\
-         \hline
-         11.50 - 12.00 & Break & - \\
-         \hline
-         12.00 - 12.25 & Testing: exercise & Teams \\
-         \hline
-         12.25 - 12.50 & Live coding solution & YouTube \\
-         \hline
-         12.50 - 14.00 & Lunch & - \\
-         \hline
-         14.00 - 14.25 & Services: exercise & Teams \\
-         \hline
-         14.25 - 14.50 & Live coding solution & YouTube \\
-         \hline
-         14.50 - 15.00 & Break & - \\
-         \hline
-         15.00 - 15.25 & Docker: exercise & Teams \\
-         \hline
-         15.25 - 15.50 & Live coding solution & YouTube \\
-         \hline
-         15.50 - 16.00 & Close & YouTube \\
-         \hline
+    \centering \begin{tabular}{c|c|c}
+         Time & Activity & Platform  \\ \hline 10.00 - 10.10 &
+         Introduction & YouTube \\ \hline 10.10 - 10.30 & Coding practice:
+         exercise & Teams \\ \hline 10.30 - 10.50 & Live coding solution
+         & YouTube \\ \hline 10.50 - 11.00 & Break & - \\ \hline 11.00
+         - 11.25 & Version control: exercise & Teams \\ \hline 11.25 -
+         11.50 & Live coding solution & YouTube \\ \hline 11.50 - 12.00 &
+         Break & - \\ \hline 12.00 - 12.25 & Testing: exercise & Teams \\
+         \hline 12.25 - 12.50 & Live coding solution & YouTube \\ \hline
+         12.50 - 14.00 & Lunch & - \\ \hline 14.00 - 14.25 & Services:
+         exercise & Teams \\ \hline 14.25 - 14.50 & Live coding solution
+         & YouTube \\ \hline 14.50 - 15.00 & Break & - \\ \hline 15.00
+         - 15.25 & Docker: exercise & Teams \\ \hline 15.25 - 15.50 &
+         Live coding solution & YouTube \\ \hline 15.50 - 16.00 & Close &
+         YouTube \\ \hline
     \end{tabular}
 \end{table}
 
-The exercise to be completed on the day, which will include assessment details, will also be made available to attendees prior to the session.
+The exercise to be completed on the day, which will include assessment
+details, will also be made available to attendees prior to the session.
 
 \end{document}
