--- a/workshop.tex
+++ b/workshop.tex
@@ -133,21 +133,77 @@ be made available to attendees before the session. The structure of the
 day will be as follows:
 
 \begin{table}[h!]
+
     \centering \begin{tabular}{c|c|c}
-         Time & Activity & Platform  \\ \hline 10.00 - 10.10 &
-         Introduction & YouTube \\ \hline 10.10 - 10.30 & Coding practice:
-         exercise & Teams \\ \hline 10.30 - 10.50 & Live coding solution
-         & YouTube \\ \hline 10.50 - 11.00 & Break & - \\ \hline 11.00
-         - 11.25 & Version control: exercise & Teams \\ \hline 11.25 -
-         11.50 & Live coding solution & YouTube \\ \hline 11.50 - 12.00 &
-         Break & - \\ \hline 12.00 - 12.25 & Testing: exercise & Teams \\
-         \hline 12.25 - 12.50 & Live coding solution & YouTube \\ \hline
-         12.50 - 14.00 & Lunch & - \\ \hline 14.00 - 14.25 & Services:
-         exercise & Teams \\ \hline 14.25 - 14.50 & Live coding solution
-         & YouTube \\ \hline 14.50 - 15.00 & Break & - \\ \hline 15.00
-         - 15.25 & Docker: exercise & Teams \\ \hline 15.25 - 15.50 &
-         Live coding solution & YouTube \\ \hline 15.50 - 16.00 & Close &
-         YouTube \\ \hline
+         
+         Time & Activity & Platform  \\ 
+         
+         \hline 
+         
+         10.00 - 10.10 & Introduction & YouTube \\ 
+         
+         \hline 
+         
+         10.10 - 10.30 & Coding practice: exercise & Teams \\ 
+         
+         \hline 
+         
+         10.30 - 10.50 & Live coding solution & YouTube \\ 
+         
+         \hline 
+         
+         10.50 - 11.00 & Break & - \\ 
+         
+         \hline 
+         
+         11.00 - 11.25 & Version control: exercise & Teams \\ 
+         
+         \hline 
+         
+         11.25 - 11.50 & Live coding solution & YouTube \\ 
+         
+         \hline 
+         
+         11.50 - 12.00 & Break & - \\ 
+         
+         \hline 
+         
+         12.00 - 12.25 & Testing: exercise & Teams \\
+         
+         \hline 
+         
+         12.25 - 12.50 & Live coding solution & YouTube \\ 
+         
+         \hline
+         
+         12.50 - 14.00 & Lunch & - \\ 
+         
+         \hline 
+         
+         14.00 - 14.25 & Services: exercise & Teams \\ 
+         
+         \hline 
+         
+         14.25 - 14.50 & Live coding solution & YouTube \\ 
+         
+         \hline 
+         
+         14.50 - 15.00 & Break & - \\ 
+         
+         \hline 
+         
+         15.00 - 15.25 & Docker: exercise & Teams \\ 
+         
+         \hline 
+         
+         15.25 - 15.50 & Live coding solution & YouTube \\ 
+         
+         \hline 
+         
+         15.50 - 16.00 & Close & YouTube \\ 
+         
+         \hline
+         
     \end{tabular}
 \end{table}
 
