--- a/workshop.tex
+++ b/workshop.tex
@@ -117,7 +117,7 @@ image can be run using software such as VirtualBox
 
 Slack will be used for text communication during the
 workshop. Attendees are also welcome to ask questions, such as
-regarding software installation, prior to the session. Please
+those regarding software installation, prior to the session. Please
 sign up for the `sustainability2020` workspace here, and
 ensure you have access on the day of the workshop: \newline
 \href{https://join.slack.com/t/sustainability2020hq/signup}{https://join.slack.com/t/sustainability2020hq/signup}
@@ -134,77 +134,9 @@ day will be as follows:
 
 \begin{table}[h!]
 
-    \centering \begin{tabular}{c|c|c}
-
-         Time & Activity & Platform  \\
-
-         \hline
-
-         10.00 - 10.10 & Introduction & YouTube \\
-
-         \hline
-
-         10.10 - 10.30 & Coding practice: exercise & Teams \\
-
-         \hline
-
-         10.30 - 10.50 & Live coding solution & YouTube \\
-
-         \hline
-
-         10.50 - 11.00 & Break & - \\
-
-         \hline
-
-         11.00 - 11.25 & Version control: exercise & Teams \\
-
-         \hline
-
-         11.25 - 11.50 & Live coding solution & YouTube \\
-
-         \hline
-
-         11.50 - 12.00 & Break & - \\
-
-         \hline
-
-         12.00 - 12.25 & Testing: exercise & Teams \\
-
-         \hline
-
-         12.25 - 12.50 & Live coding solution & YouTube \\
-
-         \hline
-
-         12.50 - 14.00 & Lunch & - \\
-
-         \hline
-
-         14.00 - 14.25 & Services: exercise & Teams \\
-
-         \hline
-
-         14.25 - 14.50 & Live coding solution & YouTube \\
-
-         \hline
-
-         14.50 - 15.00 & Break & - \\
-
-         \hline
-
-         15.00 - 15.25 & Docker: exercise & Teams \\
-
-         \hline
-
-         15.25 - 15.50 & Live coding solution & YouTube \\
-
-         \hline
-
-         15.50 - 16.00 & Close & YouTube \\
-
-         \hline
-
-    \end{tabular}
+    \centering 
+    
+    \input{tables/workshop-schedule}
     
 \end{table}
 
