Update on Overleaf.

--- a/workshop-slides.tex
+++ b/workshop-slides.tex
@@ -12,7 +12,6 @@
 
 \usepgfplotslibrary{dateplot}
 
-%==============================
 %Project imports:
 
 \usepackage[color=yellow]{todonotes}
@@ -21,26 +20,23 @@
 
 \urlstyle{same}  % don't use monospace font for urls
 
-%==============================
-
-%==============================
 %Project code:
-\hypersetup{
-	unicode=true,
-	pdftitle={},
-	pdfauthor={},
-	pdfkeywords={},
-	pdfborder={0 0 0},
-	breaklinks=true
-}
+
+\hypersetup{unicode=true,pdftitle={},pdfauthor={},
+pdfkeywords={},pdfborder={0 0 0},breaklinks=true}
+
 \makeatletter
-%==============================
+
+%Document:
 
 \title{Software Sustainability Workshop}
+
 \subtitle{}
-% \date{\today}
+
 \date{December 9th}
+
 \author{Martin Chapman}
+
 \institute{King's College London}
 
 \begin{document}
@@ -48,6 +44,7 @@
 %\maketitle
 
 %==============================
+
 \begin{frame}[fragile]{Workshops in the time of COVID}
 
 The online material, which you have already reviewed, is the `\textbf{lecture}'.
@@ -55,6 +52,7 @@ The online material, which you have already reviewed, is the `\textbf{lecture}'.
 \begin{itemize}
     
     \item Available on \textbf{YouTube}.
+    
     \item Catch up as quickly as you can if you have not yet reviewed this material.
     
 \end{itemize}
@@ -72,6 +70,7 @@ Links to all material available at: \href{https://github.com/martinteaching/sust
 \end{frame}
 
 %==============================
+
 \begin{frame}[fragile]{Forums}
 
 Exercise rooms, on \textbf{Teams}:
@@ -95,6 +94,7 @@ Exercise rooms, on \textbf{Teams}:
 \begin{enumerate}
     
     \item The day will be coordinated from here, and will be where the solution to each stage of the exercise is shown. 
+    
     \item Questions asked in the first two fora will inform what's discussed here (be aware of stream delays).
     
 \end{enumerate}
@@ -102,6 +102,7 @@ Exercise rooms, on \textbf{Teams}:
 \end{frame}
 
 %==============================
+
 \begin{frame}[fragile]{Structure}
 
 \centering
@@ -117,6 +118,7 @@ Exercise rooms, on \textbf{Teams}:
 \end{frame}
 
 %==============================
+
 \begin{frame}[fragile]{Assessment}
 
 A requirement for the workshop.
@@ -128,6 +130,7 @@ Please complete by the \textbf{end of the week}, to receive a mark.
 \end{frame}
 
 %==============================
+
 \begin{frame}[fragile]{A quick word on how I like to run sessions...}
 
 I never consider myself an expert. Always an \textbf{enthusiast}.
