--- a/workshop-slides.tex
+++ b/workshop-slides.tex
@@ -47,25 +47,29 @@ pdfkeywords={},pdfborder={0 0 0},breaklinks=true}
 
 \begin{frame}[fragile]{Workshops in the time of COVID}
 
-The online material, which you have already reviewed, is the `\textbf{lecture}'.
+The online material, which you have already reviewed, is the
+`\textbf{lecture}'.
 
 \begin{itemize}
-    
+
     \item Available on \textbf{YouTube}.
-    
-    \item Catch up as quickly as you can if you have not yet reviewed this material.
-    
+
+    \item Catch up as quickly as you can if you have not yet reviewed
+    this material.
+
 \end{itemize}
 
 Today is the `\textbf{tutorial}'.
 
 \begin{itemize}
-    
-    \item Complete a set of \textbf{exercises} based on the course material.
-    
+
+    \item Complete a set of \textbf{exercises} based on the course
+    material.
+
 \end{itemize}
 
-Links to all material available at: \href{https://github.com/martinteaching/sustainability2020}{github.com/martinteaching/sustainability2020}.
+Links to all material available at:
+\href{https://github.com/martinteaching/sustainability2020}{github.com/martinteaching/sustainability2020}.
 
 \end{frame}
 
@@ -76,27 +80,31 @@ Links to all material available at: \href{https://github.com/martinteaching/sust
 Exercise rooms, on \textbf{Teams}:
 
 \begin{enumerate}
-    
-    \item To be joined during the exercise sections of the workshop (live stream pauses). Ask for help from me, and from your peers.
-    
+
+    \item To be joined during the exercise sections of the workshop
+    (live stream pauses). Ask for help from me, and from your peers.
+
 \end{enumerate}
 
-\textbf{Slack}: 
+\textbf{Slack}:
 
 \begin{enumerate}
 
-    \item For asking questions in text throughout, and if everything goes wrong.
+    \item For asking questions in text throughout, and if everything
+    goes wrong.
 
 \end{enumerate}
 
 \textbf{YouTube live}, where we are now:
 
 \begin{enumerate}
-    
-    \item The day will be coordinated from here, and will be where the solution to each stage of the exercise is shown. 
-    
-    \item Questions asked in the first two fora will inform what's discussed here (be aware of stream delays).
-    
+
+    \item The day will be coordinated from here, and will be where the
+    solution to each stage of the exercise is shown.
+
+    \item Questions asked in the first two fora will inform what's
+    discussed here (be aware of stream delays).
+
 \end{enumerate}
 
 \end{frame}
@@ -109,10 +117,10 @@ Exercise rooms, on \textbf{Teams}:
 
 \begin{table}[h!]
 
-    \centering 
-    
+    \centering
+
     \scalebox{0.75}{\input{tables/workshop-schedule}}
-    
+
 \end{table}
 
 \end{frame}
@@ -123,7 +131,8 @@ Exercise rooms, on \textbf{Teams}:
 
 A requirement for the workshop.
 
-\textbf{Highlighted in the exercises}, including submission and marking process.
+\textbf{Highlighted in the exercises}, including submission and marking
+process.
 
 Please complete by the \textbf{end of the week}, to receive a mark.
 
@@ -135,9 +144,11 @@ Please complete by the \textbf{end of the week}, to receive a mark.
 
 I never consider myself an expert. Always an \textbf{enthusiast}.
 
-Likely people here who know \textbf{way more} about aspects of this technology than I do.
+Likely people here who know \textbf{way more} about aspects of this
+technology than I do.
 
-Correct me, challenge me and tell me better ways to do things - I am here to \textbf{learn too}.
+Correct me, challenge me and tell me better ways to do things - I am
+here to \textbf{learn too}.
 
 Most importantly, collaborate and help \textbf{each other}.
 
