Update on Overleaf.

--- a/workshops/kcl/workshop-exercise.tex
+++ b/workshops/kcl/workshop-exercise.tex
@@ -8,7 +8,9 @@
 
 \usepackage[colorlinks=true,urlcolor=codeblue]{hyperref}
 
-\usepackage{minted, graphicx}
+\usepackage[cache=false]{minted}
+
+\usepackage{graphicx}
 
 %Document
 
