Update on Overleaf.

--- a/workshops/kcl/workshop.tex
+++ b/workshops/kcl/workshop.tex
@@ -8,7 +8,7 @@
 
 \usepackage[colorlinks=true,urlcolor=codeblue]{hyperref}
 
-\usepackage[cache=false]{minted}
+\usepackage[]{minted}
 
 %Document
 
