Update on Overleaf.

--- a/workshops/kcl/workshop-slides.tex
+++ b/workshops/kcl/workshop-slides.tex
@@ -154,4 +154,31 @@ Most importantly, collaborate and help \textbf{each other}.
 
 \end{frame}
 
+%==============================
+
+\begin{frame}[fragile]{KCLHI and software sustainability: microservices}
+
+King's College London Health Informatics (KCLHI).
+
+\begin{itemize}
+
+    \item \href{https://kclhi.org}{kclhi.org}.
+    
+    \item \href{https://github.com/kclhi}{github.com/kclhi}.
+    
+\end{itemize}
+
+Software structured as microservice architectures:
+
+\begin{itemize}
+    
+    \item `\textbf{Phenoflow}' - \href{https://github.com/kclhi/phenoflow}{github.com/kclhi/phenoflow}.
+    
+    \item `\textbf{CONSULT}' - \href{https://github.com/kclconsult}{github.com/kclconsult}.
+    \item `\textbf{TMRWeb}' - \href{https://github.com/kclconsult/tmrweb}{github.com/kclconsult/tmrweb}.
+    
+\end{itemize}
+
+\end{frame}
+
 \end{document}
