Update on Overleaf.

--- a/workshops/kcl/workshop-slides.tex
+++ b/workshops/kcl/workshop-slides.tex
@@ -168,7 +168,7 @@ King's College London Health Informatics (KCLHI).
     
 \end{itemize}
 
-Software structured as microservice architectures:
+Microservice architectures:
 
 \begin{itemize}
     
