Update 2022 workshop prerequisites

--- a/workshops/kcl/2022/workshop.tex
+++ b/workshops/kcl/2022/workshop.tex
@@ -101,7 +101,7 @@ This image can be run using software such as VirtualBox: \newline
 \section{Workshop}
 
 The workshop itself will be structured as a number of different sessions, each of which will take place on Microsoft Teams.
-Links to each session will be made available to attendees in advance.
+Teams links will be made available to attendees in advance.
 Each session will relate to one of the five topics covered in the course, and feature an exercise on that topic:
 
 \begin{table}[h!]
@@ -114,8 +114,8 @@ Each session will relate to one of the five topics covered in the course, and fe
 
 \subsection{JupyterLab}
 
-Each session will be split into two parts: first, attendees will briefly review the exercise independently. 
-Following this, \emph{JupyterLab} (with a \emph{Visual Studio Live Share} session and screen sharing as a backup) will be used to collaboratively develop a solution.
+In addition, each session will be split into two parts: first, attendees will briefly review the exercise independently. 
+Following this, \emph{JupyterLab} (with both a \emph{Visual Studio Live Share} session and screen sharing acting as backups) will be used to collaboratively develop a solution.
 
 As such, attendees should familiarise themselves with the Jupyter development environment.
 A demo environment can be accessed here: \href{https://jupyter.org/try}{https://jupyter.org/try}.
@@ -124,7 +124,7 @@ A demo environment can be accessed here: \href{https://jupyter.org/try}{https://
 Attendees using other operating systems should make sure they can access, and familiarise themselves with, \emph{Visual Studio Code for the Web} before the session.
 Further details are available here: \href{https://visualstudio.microsoft.com/services/live-share/}{https://visualstudio.microsoft.com/services/live-share/}}
 
-\emph{As an additional backup, attendees should prepare to share their screens during the session.}
+\emph{As an additional backup, attendees should be prepared to share their screens during the session.}
 
 \subsection{Slack}
 
