Update on Overleaf.

--- a/workshops/kcl/2022/workshop-slides.tex
+++ b/workshops/kcl/2022/workshop-slides.tex
@@ -91,7 +91,7 @@ A series of \textbf{Teams} sessions, each centred around one of the five course 
 
 There is an \textbf{exercise} available for each session, based on the current topic.
 
-The first part of each session will \textbf{individually} give you time to review and make a start on the exercise.
+The first part of each session will give you time \textbf{individually} to review and make a start on the exercise.
 
 The second will be a \textbf{collaborative} coding session, during which we will construct an answer to the exercise together.
 
