Update on Overleaf.

--- a/workshops/kcl/2022/workshop-exercises.tex
+++ b/workshops/kcl/2022/workshop-exercises.tex
@@ -122,4 +122,10 @@ The total number of collisions should be recorded and reported back to the user 
 
 Under this setup, the client calls a service (robot), which in turn calls a second service (object) as a part of its operation before reporting the results back to the client.
 
+\section{Assessment}
+
+Attendees at the workshop will be given time to review and start these exercises individually, and will then be asked to complete them fully with each other in an online collaborative environment.
+
+Sufficient engagement with these collaborative sessions will result in a `pass' mark for the workshop.
+
 \end{document}
