--- a/workshops/kcl/2022/workshop-slides.tex
+++ b/workshops/kcl/2022/workshop-slides.tex
@@ -111,7 +111,7 @@ The second will be a \textbf{collaborative} coding session, during which we will
 
 A requirement for the workshop.
 
-Please \textbf{engage sufficiently with the interactive coding sessions} in order to receive a `pass' mark.
+Please \textbf{engage sufficiently with the collaborative coding sessions} in order to receive a `pass' mark.
 
 \end{frame}
 
