--- a/workshops/kcl/2022/workshop.tex
+++ b/workshops/kcl/2022/workshop.tex
@@ -81,6 +81,8 @@ In order of importance:
     Confirm docker is installed by issuing the command
     \mintinline[bgcolor=bg]{bash}{docker run hello-world} on a terminal.
 
+    \emph{Note: if you receive a permissions error when running this command on a Linux machine, you may be required to run the command as the root user by prefixing it with the \mintinline[bgcolor=bg]{bash}{sudo} keyword. To permanently allow a non-root user access to Docker you can add a user (e.g. `user') to the docker Unix group with the command \mintinline[bgcolor=bg]{bash}{sudo usermod -aG docker user}.}
+
     \item \textbf{Docker Compose}
     (\href{https://docs.docker.com/compose/install/}{https://docs.docker.com/compose/install/})
 
