Update on Overleaf.

--- a/workshops/kcl/2022/workshop-exercises.tex
+++ b/workshops/kcl/2022/workshop-exercises.tex
@@ -103,8 +103,8 @@ You are welcome to add additional tests also.
 
 \section{Session 4 (14.00 - 14.50) - Services}
 
-The supporting material for this session are available at
-\href{https://github.com/martinteaching/sustainability}{github.com/martinteaching/sustainability}.
+The supporting materials for this session are available at \newline
+\href{https://github.com/martinteaching/sustainability/tree/master/resources}{github.com/martinteaching/sustainability/tree/master/resources}.
 
 Wrap your Python robot simulation model in a server and run it.
 
