--- a/workshops/kcl/2025/workshop-slides.tex
+++ b/workshops/kcl/2025/workshop-slides.tex
@@ -48,6 +48,24 @@
 
 %==============================
 
+\begin{frame}[fragile]{Summary}
+
+\textbf{Definition}: The ability of software to endure.
+
+\textbf{Useful for us because}: We want our research software to have continued impact.
+
+\textbf{Achieved by}:
+
+\begin{center}
+    \input{tables/software-sustainability.tex}
+\end{center}
+
+\textbf{Note}: Sustainable (i.e. environmentally friendly) software is important too!
+
+\end{frame}
+
+%==============================
+
 \begin{frame}[fragile]{Teaching format}
 
 The online material, which you have already reviewed, is the `\textbf{lecture}'.
