Update 2025 workshop material
- Prerequisites
- Slides

--- a/workshops/kcl/2025/README.tex
+++ b/workshops/kcl/2025/README.tex
@@ -41,9 +41,9 @@ The exercise to be completed on the day, which will include an assessment compon
 
 \subsection{Installation}
 
-\subsubsection{GitHub codespaces (recommended)}
+\subsubsection{GitHub Codespaces (recommended)}
 
-Students should familiarise themselves with how to use \href{https://github.com/codespaces}{GitHub Codespaces} prior to attending the workshop, and preferably prior to engaging with the recorded material.
+Attendees should familiarise themselves with how to use \href{https://github.com/codespaces}{GitHub Codespaces} prior to attending the workshop, and preferably prior to engaging with the recorded material.
 
 Students should confirm that they can interact with the following software within a codespace.
 In order of importance:
@@ -86,18 +86,18 @@ Note that support with these Codespace prerequisites cannot be provided during t
 
 \subsubsection{Direct (backup)}
 
-In case of any issues with GitHub Codespaces, students are encouraged to install the software listed above directly to their machines using the links provided. 
+In case of any issues with GitHub Codespaces, attendees are encouraged to install the software listed above directly to their machines using the links provided. 
 
 \emph{Note: if you receive a permissions error when running the Docker command on a Linux machine, you may be required to run the command as the root user by prefixing it with the \mintinline[bgcolor=bg]{bash}{sudo} keyword. 
 To permanently allow a non-root user access to Docker you can add a user (e.g. `user') to the docker Unix group with the command \mintinline[bgcolor=bg]{bash}{sudo usermod -aG docker user}.}
 
 \section{Workshop}
 
-Students may wish to review the \href{https://github.com/martinteaching/sustainability/blob/master/workshops/kcl/2025/workshop-slides.md}{workshop slides} in advance to understand the structure of the workshop itself.
+Attendees may wish to review the \href{https://github.com/martinteaching/sustainability/blob/master/workshops/kcl/2025/workshop-slides.md}{workshop slides} in advance to understand the structure of the workshop itself.
 
 \subsection{Visual Studio Code}
 
-Visual Studio Code, which will be used for collaborative coding during the workshop, can be used through the browser, however students may also like to install this software locally.
+Visual Studio Code, which may be used for collaborative coding during the workshop, can be used through the browser, however students may also like to install this software locally.
 
 \emph{Problems with any of the resources listed above should be reported to Martin Chapman (martin.chapman@kcl.ac.uk) prior to the workshop.}
 
