--- a/workshops/kcl/2025/tables/software-sustainability.tex
+++ b/workshops/kcl/2025/tables/software-sustainability.tex
@@ -20,7 +20,7 @@
 
       \hline
 
-      Portability and Scalability & Containerisation & Docker containers can be \textbf{run anywhere} and can be \textbf{replicated}. \\
+      Portability and Scalability & Containerisation (Docker) & Docker containers can be \textbf{run anywhere} and can be \textbf{replicated}. \\
 
       \hline
 
