--- a/workshops/kcl/2025/workshop-slides.tex
+++ b/workshops/kcl/2025/workshop-slides.tex
@@ -48,11 +48,38 @@
 
 %==============================
 
-\begin{frame}[fragile]{Summary}
+\begin{frame}[fragile]{Format}
 
-\textbf{Definition}: The ability of software to endure.
+    The \href{https://github.com/martinteaching/sustainability#material}{\textbf{online material}}, which you have hopefully already reviewed, is the `\textbf{lecture}'.
+    
+    \begin{itemize}
+    
+        \item Available on \textbf{YouTube} (recorded offline and via live stream).
+    
+        \item If you have not yet had an opportunity to review this material, there will be \textbf{time today} to do so.
+    
+    \end{itemize}
+    
+    Today is the `\textbf{tutorial}'.
+    
+    \begin{itemize}
+    
+        \item A \href{https://github.com/martinteaching/sustainability/tree/master/workshops/kcl/2025}{\textbf{workshop}} in which we further explore the ideas from the course.
+    
+    \end{itemize}
+    
+    Links to all material available at:
+    \href{https://github.com/martinteaching/sustainability}{\textbf{github.com/martinteaching/sustainability}}.
+    
+\end{frame}
 
-\textbf{Useful for us because}: We want our research software to have continued impact.
+%==============================
+
+\begin{frame}[fragile]{Summary: Software sustainability}
+
+\textbf{Definition}: The ability of software to \textbf{endure}.
+
+\textbf{Useful for us because}: We want our research software to have \textbf{continued impact}.
 
 \textbf{Achieved by}:
 
@@ -66,36 +93,9 @@
 
 %==============================
 
-\begin{frame}[fragile]{Teaching format}
-
-The online material, which you have already reviewed, is the `\textbf{lecture}'.
-
-\begin{itemize}
-
-    \item Available on \textbf{YouTube} (recorded offline and via live stream).
-
-    \item Catch up as quickly as you can if you have not yet reviewed this material.
-
-\end{itemize}
-
-Today is the `\textbf{tutorial}'.
-
-\begin{itemize}
-
-    \item A \textbf{workshop} in which we further explore the ideas from the course.
-
-\end{itemize}
-
-Links to all material available at:
-\href{https://github.com/martinteaching/sustainability}{\textbf{github.com/martinteaching/sustainability}}.
-
-\end{frame}
-
-%==============================
-
 \begin{frame}[fragile, allowframebreaks]{Workshop structure}
 
-A series of five 50-minute sessions.
+A series of \textbf{five 50-minute sessions}.
 Each session will relate to one of the five topics covered in the course:
 
 \begin{centering}
@@ -112,15 +112,21 @@ Each session will relate to one of the five topics covered in the course:
 
 \framebreak
 
-There is an \textbf{exercise} available for each session, based on the current topic.
+There is an \href{https://github.com/martinteaching/sustainability/blob/master/workshops/kcl/2025/workshop-exercises.md}{\textbf{exercise}} available for each session, based on the current topic.
 
-The first part of each session will give you time \textbf{individually} to review and make a start on the exercise.
+The first part of each session will give you time \textbf{individually} to review and make a start on the exercise using \href{https://github.com/martinteaching/sustainability/tree/master/workshops/kcl/2025#github-codespaces-recommended}{GitHub Codespaces}.
+
+\begin{itemize}
+
+    \item Also time to \textbf{catch up on the online material} for the current topic.
+
+\end{itemize}
 
 The second will be a \textbf{collaborative} coding session, during which we will construct an answer to the exercise together.
 
 \begin{itemize}
 
-  \item I will share a \emph{Visual Studio Code} link.
+  \item I will share a \emph{Visual Studio Code} link (with `\textit{at-keyboard}' coding as a backup).
 
   \item We will take it in turns to be \textbf{in charge of the editor}, with those not currently coding \textbf{helping with the solution}.
 
