Update 2025 workshop exercises

--- a/workshops/kcl/2025/workshop-exercises.tex
+++ b/workshops/kcl/2025/workshop-exercises.tex
@@ -56,7 +56,7 @@ Thus, this code is a piece of research software allowing us to explore the relat
 
 \section{Session 1 (10.10 - 10.50) - Coding practice}
 
-Refactor the current Python code simulating the drunkard's walk so that it adheres to the principles of coding practice discussed in the course.
+Using \href{https://github.com/martinteaching/sustainability/tree/master/workshops/kcl/2025#github-codespaces-recommended}{GitHub Codespaces} (or your local machine), refactor the \href{https://github.com/martinteaching/sustainability/blob/master/workshops/kcl/2025/resources/drunkard.py}{current Python code} simulating the drunkard's walk so that it adheres to the principles of coding practice discussed in the course.
 
 \emph{You are welcome to reimplement the code using alternative logic first, should you wish to.}
 
@@ -101,7 +101,7 @@ Move the request for 2D space dimensions to a Javascript client, which, once acq
 
 \section{Session 5 (15.00 - 15.50) - Docker}
 
-Dockerise your program -- using a Dockerfile and Docker Compose -- allowing the Python server to run in a container, and the Javascript client to issue requests to it.
+Dockerise your program---using a Dockerfile and Docker Compose---allowing the Python server to run in a container, and the Javascript client to issue requests to it.
 
 \section{Additional Tasks}
 
