Update 2025 workshop material
- Link to exercises

--- a/workshops/kcl/2025/README.tex
+++ b/workshops/kcl/2025/README.tex
@@ -10,6 +10,8 @@
 
 \usepackage[]{minted}
 
+\usepackage[normalem]{ulem}
+
 %Document
 
 \title{Software Sustainability - King's workshop prerequisites} 
@@ -37,7 +39,7 @@ Please watch the \href{https://github.com/martinteaching/sustainability#material
 
 As the workshop will be entirely practical, this material will not be presented, and instead the attendees will develop their software by completing a set of exercises based upon the recorded content. 
 
-The exercise to be completed on the day, which will include an assessment component, will also be made available to attendees prior to the workshop.
+\sout{The exercise to be completed on the day, which will include an assessment component, will also be made available to attendees prior to the workshop.} Exercises are available \href{https://github.com/martinteaching/sustainability/blob/master/workshops/kcl/2025/workshop-exercises.md}{here}.
 
 \subsection{Installation}
 
